--- a/.env.example
+++ b/.env.example
@@ -1,8 +1,9 @@
-APP_NAME=Laravel
+APP_NAME="Yo Print"
 APP_ENV=local
-APP_KEY=
+APP_KEY=base64:w1Xp9oqKxlvZVcneYnQ2TzLY9FOUxSHPWWVa/OV7PQU=
 APP_DEBUG=true
 APP_URL=http://localhost:8008
+FRONTEND_URL=http://localhost:3000
 APP_PORT=8008
 
 LOG_CHANNEL=stack
@@ -17,7 +18,7 @@ DB_USERNAME=root
 DB_PASSWORD=
 FORWARD_DB_PORT=3308
 
-BROADCAST_DRIVER=log
+BROADCAST_DRIVER=pusher
 CACHE_DRIVER=file
 FILESYSTEM_DISK=local
 QUEUE_CONNECTION=sync
@@ -45,9 +46,9 @@ AWS_DEFAULT_REGION=us-east-1
 AWS_BUCKET=
 AWS_USE_PATH_STYLE_ENDPOINT=false
 
-PUSHER_APP_ID=
-PUSHER_APP_KEY=
-PUSHER_APP_SECRET=
+PUSHER_APP_ID=11111
+PUSHER_APP_KEY=11111
+PUSHER_APP_SECRET=11111
 PUSHER_APP_CLUSTER=mt1
 
 MIX_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
