--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,8 @@
         "maatwebsite/excel": "^3.1",
         "neitanod/forceutf8": "^2.0",
         "psr/simple-cache": "^1.0",
-        "pusher/pusher-php-server": "^7.0"
+        "pusher/pusher-php-server": "^7.0",
+        "spatie/laravel-query-builder": "^5.0"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
