--- a/.env.example
+++ b/.env.example
@@ -11,11 +11,11 @@ LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
 DB_CONNECTION=mysql
-DB_HOST=127.0.0.1
+DB_HOST=mysql
 DB_PORT=3306
 DB_DATABASE=backend
-DB_USERNAME=root
-DB_PASSWORD=
+DB_USERNAME=sail
+DB_PASSWORD=sail
 FORWARD_DB_PORT=3308
 
 BROADCAST_DRIVER=pusher
